# AI-Spec-Driven-Book

./: .gitignore  CHAPTER_SUMMARY.md  CLAUDE.md  Hackathon I_ Physical AI & Humanoid Robotics Textbook.md  PERSONALIZATION_IMPLEMENTATION_SUMMARY.md  PERSONALIZATION_SETUP.md  README.md  count_words.py  test_auth_flow.py  trigger_ingestion.py  vercel.json
.claude/: README.md
.gemini/: settings.json
.gemini/commands/: sp.adr.toml  sp.analyze.toml  sp.checklist.toml  sp.clarify.toml  sp.implement.toml  sp.plan.toml  sp.specify.toml  (+1 more)
backend/: .gitignore  .vercel_build_command.sh  Dockerfile  PERSONALIZATION_QUICKREF.md  README.md  delete_collection.py  main.py  netlify.toml  pyproject.toml  requirements.txt  test_auth.py  vercel.json
backend/api/: chat.py  ingest.py  query.py
backend/models/: __init__.py
backend/netlify/functions/: chat.py  health.py  ingest.py  query.py
backend/services/: embedding_service.py  qdrant_service.py
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  chat.py  ingest.py  personalize.py  query.py
backend/src/chatkit/: __init__.py  router.py  server.py
backend/src/middleware/: auth.py
backend/src/models/: __init__.py
backend/src/services/: auth_service.py  embedding_service.py  gemini_personalization_service.py  personalization_service.py  qdrant_service.py
backend/src/utils/: content_utils.py  dimension_check.py  logging_utils.py
backend/tests/: test_gemini_personalization.py  test_personalization_integration.py
backend/tests/api/: test_chat.py  test_ingest.py  test_query.py
backend/tests/services/: test_embedding_service.py  test_qdrant_service.py
book_frontend/: docusaurus.config.ts  jest.config.js  package-lock.json  package.json  sidebars.ts  test_api_config.js
(+197 files in other folders)
