[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "qdrant-client==1.16.1",
    "openai==1.59.8",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "mangum==0.19.0",
    "anyio==4.12.0",
    "starlette==0.50.0"
]
