[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.0",
    "fastembed>=0.7.4",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "openai>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.38.0",
]
