[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.6",
    "fastapi-limiter>=0.2.0",
    "fastembed>=0.7.4",
    "google-generativeai>=0.8.6",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "openai>=2.18.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.16.2",
    "redis>=7.1.1",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
    "uvicorn>=0.40.0",
]
